Push left nav bar button to left edge on small screen; fix sticky hover effect on touch screens; add min width to MainCard

--- a/src/components/MainCard/MainCard.css
+++ b/src/components/MainCard/MainCard.css
@@ -7,4 +7,11 @@
     max-width: 48rem;
     box-shadow: 4px 4px 8px 0px rgba(0, 0, 0, .2);
     color: var(--text-color);
+    min-width: 16rem;
+}
+
+@media screen and (max-width: 48rem) {
+    .main-card {
+        margin-bottom: 0;
+    }
 }
